--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js"
   },
   "keywords": ["messager", "mutual", "unlock"],
-  "author": "",
+  "author": "Shao Ziyue",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
